@@ -2750,7 +2750,7 @@ name|midkey
 decl_stmt|;
 specifier|private
 name|boolean
-name|topFirstNextCall
+name|firstNextCall
 init|=
 literal|true
 decl_stmt|;
@@ -2999,47 +2999,38 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|WritableComparable
+name|closest
+init|=
+literal|null
+decl_stmt|;
 if|if
 condition|(
 name|top
 condition|)
 block|{
-if|if
-condition|(
+comment|// If top, the lowest possible key is midkey.  Do not have to check
+comment|// what comes back from super getClosest.  Will return exact match or
+comment|// greater.
+name|closest
+operator|=
+operator|(
 name|key
 operator|.
 name|compareTo
 argument_list|(
+name|this
+operator|.
 name|midkey
 argument_list|)
 operator|<
 literal|0
-condition|)
-block|{
-return|return
-name|midkey
-return|;
-block|}
-block|}
-elseif|else
-if|if
-condition|(
-name|key
+operator|)
+condition|?
+name|this
 operator|.
-name|compareTo
-argument_list|(
 name|midkey
-argument_list|)
-operator|>=
-literal|0
-condition|)
-block|{
-comment|// Contract says return null if EOF.
-return|return
-literal|null
-return|;
-block|}
-return|return
+else|:
 name|super
 operator|.
 name|getClosest
@@ -3048,6 +3039,70 @@ name|key
 argument_list|,
 name|val
 argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// We're serving bottom of the file.
+if|if
+condition|(
+name|key
+operator|.
+name|compareTo
+argument_list|(
+name|this
+operator|.
+name|midkey
+argument_list|)
+operator|<
+literal|0
+condition|)
+block|{
+comment|// Check key is within range for bottom.
+name|closest
+operator|=
+name|super
+operator|.
+name|getClosest
+argument_list|(
+name|key
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+comment|// midkey was made against largest store file at time of split. Smaller
+comment|// store files could have anything in them.  Check return value is
+comment|// not beyond the midkey (getClosest returns exact match or next
+comment|// after).
+if|if
+condition|(
+name|closest
+operator|!=
+literal|null
+operator|&&
+name|closest
+operator|.
+name|compareTo
+argument_list|(
+name|this
+operator|.
+name|midkey
+argument_list|)
+operator|>=
+literal|0
+condition|)
+block|{
+comment|// Don't let this value out.
+name|closest
+operator|=
+literal|null
+expr_stmt|;
+block|}
+block|}
+comment|// Else, key is> midkey so let out closest = null.
+block|}
+return|return
+name|closest
 return|;
 block|}
 comment|/** {@inheritDoc} */
@@ -3095,72 +3150,19 @@ name|IOException
 block|{
 if|if
 condition|(
-name|top
-operator|&&
-name|topFirstNextCall
+name|firstNextCall
 condition|)
 block|{
-name|topFirstNextCall
+name|firstNextCall
 operator|=
 literal|false
 expr_stmt|;
-return|return
-name|doFirstNextProcessing
-argument_list|(
-name|key
-argument_list|,
-name|val
-argument_list|)
-return|;
-block|}
-name|boolean
-name|result
-init|=
-name|super
-operator|.
-name|next
-argument_list|(
-name|key
-argument_list|,
-name|val
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-operator|!
-name|top
-operator|&&
-name|key
+name|this
 operator|.
-name|compareTo
-argument_list|(
-name|midkey
-argument_list|)
-operator|>=
-literal|0
+name|top
 condition|)
-block|{
-name|result
-operator|=
-literal|false
-expr_stmt|;
-block|}
-return|return
-name|result
-return|;
-block|}
-specifier|private
-name|boolean
-name|doFirstNextProcessing
-parameter_list|(
-name|WritableComparable
-name|key
-parameter_list|,
-name|Writable
-name|val
-parameter_list|)
-throws|throws
-name|IOException
 block|{
 comment|// Seek to midkey.  Midkey may not exist in this file.  That should be
 comment|// fine.  Then we'll either be positioned at end or start of file.
@@ -3199,6 +3201,43 @@ return|return
 literal|false
 return|;
 block|}
+block|}
+name|boolean
+name|result
+init|=
+name|super
+operator|.
+name|next
+argument_list|(
+name|key
+argument_list|,
+name|val
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|top
+operator|&&
+name|key
+operator|.
+name|compareTo
+argument_list|(
+name|midkey
+argument_list|)
+operator|>=
+literal|0
+condition|)
+block|{
+name|result
+operator|=
+literal|false
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
 comment|/** {@inheritDoc} */
 annotation|@
 name|Override
@@ -3215,7 +3254,7 @@ condition|(
 name|top
 condition|)
 block|{
-name|topFirstNextCall
+name|firstNextCall
 operator|=
 literal|true
 expr_stmt|;
